crates/eden-integration-tests/src/api/admin/snapshots/eden_integration_tests__api__admin__settings__get_route.snap
---
source: crates/eden-integration-tests/src/api/admin/settings.rs
expression: body
---
{
  "allow_guests": true,
  "updated_at": "1970-01-01T00:00:00.000Z"
}
